Moving Around the Board works

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
   test 123
 </p>
 <p>another new tag</p>
-<tic-tac-toe-board [UserKeyPress]="userKey"></tic-tac-toe-board>
+<tic-tac-toe-board ></tic-tac-toe-board>
 <hello></hello>
