--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <hello name="{{ name }}"></hello>
 <p>
-  Start editing to see some magic happen :)
-  test 123
+  Directions: Use the "A","W","S", and "D" keys to move around on the board.
+  Press the "X" key to make your move.
 </p>
-<p>another new tag</p>
 <tic-tac-toe-board ></tic-tac-toe-board>
-<hello></hello>
