Modifying player art works now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <hello name="{{ name }}"></hello>
 <p>
   Directions: Use the "A","W","S", and "D" keys to move around on the board.
-  Press the "X" key to make your move.
+  Press the "SpaceBar" key to make your move.
 </p>
 <tic-tac-toe-board ></tic-tac-toe-board>
-<player-art></player-art>
