--- a/src/app/player-art/player-art.component.html
+++ b/src/app/player-art/player-art.component.html
@@ -12,5 +12,7 @@
 <!-- PLAYER TWO ICON -->
 <div *ngIf="playerNumber==1">
   <!-- <p>2</p> -->
-  <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2021-ford-mustang-mach-1-109-1592231891.jpg?crop=0.822xw:0.695xh;0.141xw,0.192xh&resize=2048:*" alt="player one" width="100%" height="100%">
+  <!-- <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2021-ford-mustang-mach-1-109-1592231891.jpg?crop=0.822xw:0.695xh;0.141xw,0.192xh&resize=2048:*" alt="player one" width="100%" height="100%"> -->
+
+  <img src="https://i1.wp.com/motorsactu.com/wp-content/uploads/2020/04/Mustang-Original-Bullitt.jpg?fit=1200%2C675&ssl=1" alt="player one" width="100%" height="100%">
 </div>
