--- a/src/app/tic-tac-toe-board/tic-tac-toe-board.component.html
+++ b/src/app/tic-tac-toe-board/tic-tac-toe-board.component.html
@@ -61,7 +61,7 @@ Player 2 wins!
 </div>
 
 <div class="turn-tracker">
-    <!-- SHOWS BOTH PLAYERS -->
+    <!-- SHOWS BOTH PLAYERS (PLAYER KEY) -->
   <div>
     <div class="turn-tracker-component">
     <p>Player One:</p>
